--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-transform-runtime": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "mini-css-extract-plugin": "^2.8.0",
     "stylus": "^0.62.0",
