--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.8.0",
     "stylus": "^0.62.0",
     "stylus-loader": "^8.1.0",
+    "terser-webpack-plugin": "^5.3.10",
     "url-loader": "^4.1.1",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4"
