--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
+    "dotenv-webpack": "^8.0.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.8.0",
     "stylus": "^0.62.0",
